Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,6 +603,7 @@ section {
 }
 #skills {
   padding: 50px 20px 100px;
+  padding-top:80px;
   margin-bottom: 0;
   position:relative;
   overflow: visible;
